bigdecimal -> biginteger; resizing; removing lite-client - WIP; rework app launch;